Added single services. Started GUI.